# libxn

./: ChangeLog  Makefile.am  README.md  configure.ac
include/: config-int.h  encoding.h  punycode.h  rfc5892_rules.h  rfc5893_bidi.h  ucd.gen.h  ucnf.h  ucnf_composition.h  ucnf_normalization.h  xn-bool.h  xn-def.h  xn-int.h  xn.h  xn_parse.h
lib/: Makefile.am  encoding.c  punycode.c  rfc5892_rules.c  rfc5893_bidi.c  ucnf_composition.c  ucnf_normalization.c  uts46.c  uts46_status.h  xn_parse.c  xn_results.c
m4/: ac_c_enum_size.m4
tests/: Makefile.am  punycode_test.c  punycode_test_0.c  test1.c  ucd_record_test.c  ucd_test.c  ucnf_test.c  ucnf_test.pl  xn_parse_test.c
